--- a/styles.css
+++ b/styles.css
@@ -1,140 +1,210 @@
 * {
-    
-    padding: 0;
-    font-family: 'Lato', sans-serif;
-    text-decoration: none;
-    list-style: none;
-    text-align: center;
+  font-family: "Lato", sans-serif;
+  text-align: center;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
-html{
-    padding: 1rem;
-    scroll-behavior: smooth;
-    font-size: 20px;
+html {
+  padding: 1rem 3rem;
+  scroll-behavior: smooth;
+  font-size: 19px;
 }
 
-body{
-    display: flex;
-    flex-direction: column;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    line-height: 1.5rem;
-    align-items: center;
-    justify-items: center;
+body {
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  line-height: 1.5rem;
+  align-items: center;
+  justify-items: center;
 }
+li {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
+p {
+  line-height: 2rem;
+}
+
 #myBtn {
-    display: none; /*Hidden by default*/
-    position: fixed; /* Fixed/sticky position */
-    height: 2.5rem;
-    width: 2.5rem;
-    bottom: 20px; /* Place the button at the bottom of the page */
-    right: 30px; /* Place the button 30px from the right */
-    z-index: 99; /* Make sure it does not overlap */
-    border: none; /* Remove borders */
-    outline: none; /* Remove outline */
-    background-color: rgb(0, 110, 255); /* Set a background color */
-    color: white; /* Text color */
-    cursor: pointer; /* Add a mouse pointer on hover */
-    border-radius: 50%; /* Rounded corners */
-    font-size: 18px; /* Increase font size */
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    transition: 0.3s ease;
-  }
+  display: none; /*Hidden by default*/
+  position: fixed; /* Fixed/sticky position */
+  height: 2.5rem;
+  width: 2.5rem;
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: rgb(0, 110, 255); /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  border-radius: 50%; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  transition: 0.3s ease;
+}
 
-  
 #myBtn:hover {
-    height: 3rem;
-    width: 3rem;
-  }
-.logo img{
-    position: absolute;
-    top: 0;
-    right: 0;
-    height: 100px;
-    width: 100px;
+  height: 3rem;
+  width: 3rem;
 }
-.screenshot{
-    border-radius: 0.675rem;
-    box-shadow: 1px 1px 10px 0px rgba(0,0,0,0.7);
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    object-fit: contain;
-    max-width: 100%;
+.logo img {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100px;
+  width: 100px;
 }
-h1{
-    margin-bottom: 2rem;
-    font-size: 2rem;
-    line-height: 2rem;
+.screenshot {
+  display: block;
+  border-radius: 0.675rem;
+  box-shadow: 4px 5px 15px 0px rgba(0, 0, 0, 0.7);
+  /* margin-top: 1rem;
+  margin-bottom: 1rem; */
+  object-fit: contain;
+  max-width: 500px;
+  max-height: 300px;
+  width: auto;
+  height: auto;
 }
-.posttip{
-    margin-top: 1rem;
-    margin-bottom: 2rem;
+h1 {
+  margin-bottom: 2rem;
+  font-size: 2rem;
+  line-height: 2rem;
 }
-.posttip li{
-    margin: 1rem auto;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 0.5rem;
-    background: rgb(218, 218, 218);
-    color: rgb(0, 110, 255);
-    text-decoration: none;
-    font-size: 1.2rem;
-    width: fit-content;
-    border-radius: 0.5rem;
-    transition: 0.5s ease;
+.flex {
+  display: flex;
+  flex: 1;
+  gap: 3rem;
+  margin: 2rem 10rem;
+  align-items: center;
 }
-.posttip a:visited{
-    color: rgb(0, 110, 255);
+.posttip {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
-.posttip li:hover a:visited{
-    color: #ffff;
+.posttip li {
+  margin: 1rem auto;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 0.5rem;
+  background: rgb(218, 218, 218);
+  color: rgb(0, 110, 255);
+  text-decoration: none;
+  font-size: 1.2rem;
+  width: fit-content;
+  border-radius: 0.5rem;
+  transition: 0.5s ease;
 }
-.posttip li:hover{
-    background: rgb(0, 110, 255);
+.posttip li a:visited {
+  color: rgb(0, 110, 255);
 }
-.posttip li:hover a{
-    color: #ffff;
+.posttip li:hover a:visited {
+  color: #ffff;
 }
-.see_himself li{
-    justify-content: right;
-    align-items: flex-start;
-    text-align: right;
+.posttip li:hover {
+  background: rgb(0, 110, 255);
 }
-.header{
-    margin-top: 1rem;
-    padding: 0 1rem;
-    width: fit-content;
-    border-radius: 0.5rem;
-    background: rgb(218, 218, 218);
+.posttip li:hover a {
+  color: #ffff;
+}
+.see_himself li {
+  margin-right: 3rem;
+  justify-content: right;
+  align-items: flex-start;
+  text-align: right;
+  list-style-position: inside;
+}
+h2 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  padding: 0.8rem 1rem;
+  width: fit-content;
+  border-radius: 0.5rem;
+  background: rgb(218, 218, 218);
+}
+.flex p {
+  text-align: right;
+  padding-top: 50px;
 }
 
-@media (max-width: 950px){
-    html{
-        font-size: 18px;
-    }
-    .logo img{
-        height: 60px;
-        width: 60px;
-    }
-    #myBtn{
-        font-size: 12px;
-    }
+@media (max-width: 1200px) {
+  html {
+    font-size: 18px;
+  }
+  .logo img {
+    height: 60px;
+    width: 60px;
+  }
+  #myBtn {
+    font-size: 12px;
+  }
+  .flex {
+    flex-direction: column-reverse;
+    gap: 2rem;
+    align-items: center;
+  }
+  .flex p {
+    text-align: center;
+    padding-top: 0;
+  }
 }
-@media (max-width: 400px){
-    html{
-        font-size: 16px;
-    }
-    p{
-        text-align: right;
-    }
-    .logo img{
-        height: 50px;
-        width: 50px;
-    }
-    #myBtn{
-        font-size: 10px;
-    }
+
+@media (max-width: 600px) {
+  html {
+    font-size: 16px;
+  }
+  .see_himself li {
+    margin-right: 3rem;
+  }
+  p {
+    text-align: right;
+  }
+  .flex p {
+    text-align: right;
+  }
+  .screenshot {
+    max-width: 400px;
+  }
+}
+
+@media (max-width: 550px) {
+  .see_himself li {
+    margin-right: 2rem;
+  }
+  h2 {
+    font-size: 1rem;
+  }
+  .posttip li {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 450px) {
+  .see_himself li {
+    margin-right: 0;
+  }
+  .screenshot {
+    max-width: 300px;
+  }
+}
+@media (max-width: 420px) {
+  html {
+    font-size: 15px;
+  }
+  .logo img {
+    height: 50px;
+    width: 50px;
+  }
+  #myBtn {
+    font-size: 10px;
+  }
 }
