--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ html {
 }
 
 body {
+  background-color: #fefcf7;
   display: flex;
   flex-direction: column;
   margin-left: auto;
@@ -30,6 +31,9 @@ a {
 p {
   line-height: 2rem;
 }
+.top_banner {
+  margin-bottom: 2rem;
+}
 
 #myBtn {
   display: none; /*Hidden by default*/
@@ -42,6 +46,7 @@ p {
   border: none; /* Remove borders */
   outline: none; /* Remove outline */
   background-color: rgb(0, 110, 255); /* Set a background color */
+  box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 1);
   color: white; /* Text color */
   cursor: pointer; /* Add a mouse pointer on hover */
   border-radius: 50%; /* Rounded corners */
@@ -51,10 +56,16 @@ p {
   justify-content: center;
   transition: 0.3s ease;
 }
+#myBtn img {
+  transition: 0.3s ease;
+}
 
 #myBtn:hover {
   height: 3rem;
   width: 3rem;
+}
+#myBtn:hover img {
+  scale: 130%;
 }
 .logo img {
   position: absolute;
@@ -64,28 +75,36 @@ p {
   width: 100px;
 }
 .screenshot {
-  display: block;
+  /* display: block; */
+  flex: 1;
   border-radius: 0.675rem;
-  box-shadow: 4px 5px 15px 0px rgba(0, 0, 0, 0.7);
-  /* margin-top: 1rem;
-  margin-bottom: 1rem; */
+  box-shadow: 2px 3px 10px 0px rgba(0, 0, 0, 0.6);
   object-fit: contain;
   max-width: 500px;
-  max-height: 300px;
-  width: auto;
-  height: auto;
+  max-height: 30rem;
+  /* width: auto;
+  height: auto; */
 }
 h1 {
-  margin-bottom: 2rem;
+  margin-bottom: 0;
   font-size: 2rem;
   line-height: 2rem;
 }
 .flex {
+  border-radius: 0.675rem;
   display: flex;
   flex: 1;
-  gap: 3rem;
-  margin: 2rem 10rem;
+  justify-content: space-between;
+  gap: 2rem;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+  padding: 0;
   align-items: center;
+  width: 70%;
+}
+.flex p {
+  text-align: right;
+  padding-top: 20px;
 }
 .posttip {
   margin-top: 1rem;
@@ -132,12 +151,8 @@ h2 {
   border-radius: 0.5rem;
   background: rgb(218, 218, 218);
 }
-.flex p {
-  text-align: right;
-  padding-top: 50px;
-}
 
-@media (max-width: 1200px) {
+@media (max-width: 1275px) {
   html {
     font-size: 18px;
   }
@@ -151,10 +166,10 @@ h2 {
   .flex {
     flex-direction: column-reverse;
     gap: 2rem;
-    align-items: center;
+    align-items: right;
   }
   .flex p {
-    text-align: center;
+    text-align: right;
     padding-top: 0;
   }
 }
