--- a/styles.css
+++ b/styles.css
@@ -48,9 +48,7 @@ body {
 }
 .header {
   background-color: #f3f3f3;
-  /* display: flex; */
   align-items: baseline;
-  /* padding: 0.5rem; */
   gap: 1rem;
 }
 
@@ -71,7 +69,7 @@ body {
 }
 
 .dropdown {
-  position: fixed;
+  position: absolute;
   top: 6rem;
   right: 1rem;
 }
