--- a/styles.css
+++ b/styles.css
@@ -5,16 +5,10 @@
   margin: 0;
 }
 html {
-  padding: 1rem 3rem;
   scroll-behavior: smooth;
   font-size: 19px;
 }
-nav {
-  width: 90vw;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-}
+
 .selected-lang {
   cursor: pointer;
   display: flex;
@@ -47,9 +41,19 @@ body {
   justify-items: center;
 }
 .header {
+  position: fixed;
+  display: flex;
   background-color: #f3f3f3;
-  align-items: baseline;
-  gap: 1rem;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: fit-content;
+  padding: 0 2rem;
+  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+}
+main {
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 .link {
@@ -69,9 +73,12 @@ body {
 }
 
 .dropdown {
-  position: absolute;
-  top: 6rem;
-  right: 1rem;
+  position: relative;
+}
+.logo img {
+  position: relative;
+  height: 70px;
+  width: 70px;
 }
 
 .dropdown-menu {
@@ -155,23 +162,14 @@ p {
 #myBtn:hover img {
   scale: 130%;
 }
-.logo img {
-  position: absolute;
-  top: 0;
-  right: 0;
-  height: 100px;
-  width: 100px;
-}
+
 .screenshot {
-  /* display: block; */
   flex: 1;
   border-radius: 0.675rem;
   box-shadow: 2px 3px 10px 0px rgba(0, 0, 0, 0.6);
   object-fit: contain;
   max-width: 500px;
   max-height: 30rem;
-  /* width: auto;
-  height: auto; */
 }
 h1 {
   margin-bottom: 0;
@@ -179,16 +177,23 @@ h1 {
   line-height: 2rem;
 }
 .flex {
-  border-radius: 0.675rem;
   display: flex;
-  flex: 1;
   justify-content: space-between;
-  gap: 2rem;
+  align-items: center;
+  text-align: center;
+  gap: 4rem;
+  padding: 0;
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
-  padding: 0;
-  align-items: center;
-  width: 70%;
+  border-radius: 0.675rem;
+}
+.flex > * {
+  /* flex: 1; */
+  max-width: 30rem;
+  min-width: auto;
+}
+.photo {
+  text-align: left;
 }
 .flex p {
   text-align: right;
@@ -244,6 +249,9 @@ h2 {
   html {
     font-size: 18px;
   }
+  .photo {
+    text-align: center;
+  }
   .logo img {
     height: 60px;
     width: 60px;
@@ -281,6 +289,9 @@ h2 {
 }
 
 @media (max-width: 550px) {
+  html {
+    font-size: 16px;
+  }
   .see_himself li {
     margin-right: 2rem;
   }
@@ -292,6 +303,9 @@ h2 {
   }
 }
 @media (max-width: 450px) {
+  h1 {
+    font-size: 1.5rem;
+  }
   .see_himself li {
     margin-right: 0;
   }
@@ -303,6 +317,7 @@ h2 {
   html {
     font-size: 15px;
   }
+
   .logo img {
     height: 50px;
     width: 50px;
