--- a/styles.css
+++ b/styles.css
@@ -52,8 +52,7 @@ body {
   box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
 }
 main {
-  margin-left: 1rem;
-  margin-right: 1rem;
+  margin: 90px 1rem;
 }
 
 .link {
