--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 html {
   scroll-behavior: smooth;
   scroll-padding-top: var(--scroll-padding, 85px);
-  font-size: 19px;
+  font-size: 17px;
 }
 
 .selected-lang {
@@ -129,7 +129,8 @@ p {
   transition: 0.5s ease-in-out;
 }
 .accordion {
-  margin-top: 2rem;
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
   background-color: #eee;
   cursor: pointer;
   padding: 0.8rem 1rem;
@@ -138,13 +139,13 @@ p {
   border-radius: 0.5rem;
   text-align: center;
   outline: none;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: 500;
   transition: 0.4s;
 }
 .accordion.active,
 .accordion:hover {
-  background-color: #ccc;
+  background: rgb(218, 218, 218);
 }
 .accordion:after {
   content: "\002B";
@@ -169,7 +170,7 @@ h2 {
   border: none;
   border-radius: 0.5rem;
   background: rgb(218, 218, 218);
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   font-weight: 500;
 }
 .top_banner {
@@ -230,8 +231,8 @@ h1 {
   justify-content: space-between;
   align-items: center;
   text-align: center;
-  gap: 4rem;
-  padding: 0;
+  gap: 3rem;
+  padding: 0 1rem;
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
   border-radius: 0.675rem;
