--- a/styles.css
+++ b/styles.css
@@ -347,7 +347,10 @@ h1 {
 }
 @media (max-width: 450px) {
   h1 {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
+  }
+  .h2div {
+    font-size: 1.1rem;
   }
   .see_himself li {
     margin-right: 0;
