--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,8 @@ html {
 }
 
 body {
-  background-color: #fefcf7;
+  background-color: #f3f3f3;
+  color: #253036;
   display: flex;
   flex-direction: column;
   margin-left: auto;
@@ -131,7 +132,8 @@ p {
 .accordion {
   margin-top: 1rem;
   margin-bottom: 0.5rem;
-  background-color: #eee;
+  background-color: #ed6726;
+  color: #fff;
   cursor: pointer;
   padding: 0.8rem 1rem;
   width: 100%;
@@ -145,7 +147,7 @@ p {
 }
 .accordion.active,
 .accordion:hover {
-  background: rgb(218, 218, 218);
+  background: #f59a6d;
 }
 .accordion:after {
   content: "\002B";
@@ -169,7 +171,8 @@ h2 {
   padding: 0.8rem 1rem;
   border: none;
   border-radius: 0.5rem;
-  background: rgb(218, 218, 218);
+  background: #ed6726;
+  color: #fff;
   font-size: 1.3rem;
   font-weight: 500;
 }
