--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,7 @@ main {
 .dropdown-menu {
   position: absolute;
   top: calc(100% + 0.25rem);
+  width: 7rem;
   background-color: rgb(255, 255, 255);
   padding: 0.75rem;
   border-radius: 0.25rem;
@@ -108,14 +109,9 @@ main {
 }
 .link {
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+
   gap: 0.5rem;
-}
-.link img {
-  width: 1.3rem;
-  height: 0.8rem;
-  box-shadow: 2px 2px 3px 0 rgba(0, 0, 0, 0.3);
-  align-self: center;
 }
 
 li {
@@ -132,19 +128,13 @@ p {
 .accordion {
   margin-top: 1rem;
   margin-bottom: 0.5rem;
-  background: rgb(47, 157, 178);
-  background: linear-gradient(
-    319deg,
-    rgba(47, 157, 178, 1) 10%,
-    rgba(237, 103, 38, 1) 35%
-  );
+  background: #c5c6d0;
   box-shadow: 4px 4px 10px 0 rgba(0, 0, 0, 0.4);
-  color: #fff;
   cursor: pointer;
   padding: 0.8rem 1rem;
   width: 100%;
   border: none;
-  border-radius: 0.5rem;
+  border-radius: 2rem;
   text-align: center;
   outline: none;
   font-size: 1.2rem;
@@ -153,17 +143,11 @@ p {
 }
 .accordion.active,
 .accordion:hover {
-  background: rgb(37, 124, 141);
-  background: linear-gradient(
-    319deg,
-    rgba(37, 124, 141, 1) 10%,
-    rgba(165, 64, 13, 1) 35%
-  );
   transform: rotateY(-10deg);
+  box-shadow: 4px 4px 8px 0 rgba(0, 0, 0, 0.6);
 }
 .accordion:after {
   content: "\002B";
-  color: #fff;
   font-weight: bold;
   float: left;
   margin-left: 5px;
@@ -182,15 +166,9 @@ h2 {
   margin-bottom: 2rem;
   padding: 0.8rem 1rem;
   border: none;
-  border-radius: 0.5rem;
-  background: rgb(47, 157, 178);
-  background: linear-gradient(
-    319deg,
-    rgba(47, 157, 178, 1) 10%,
-    rgba(237, 103, 38, 1) 35%
-  );
+  border-radius: 2rem;
+  background: #c5c6d0;
   box-shadow: 4px 4px 10px 0 rgba(0, 0, 0, 0.4);
-  color: #fff;
   font-size: 1.3rem;
   font-weight: 500;
 }
